// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrim should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-scrim"
    role="presentation"
  />
</DocumentFragment>
`;

exports[`BpkScrim should render correctly with dark="true" 1`] = `
<DocumentFragment>
  <div
    class="bpk-scrim bpk-scrim--dark"
    role="presentation"
  />
</DocumentFragment>
`;
